# chemin-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
chemin/: Cargo.toml
chemin-macros/: Cargo.toml  README.md
chemin-macros/src/: derive_chemin.rs  helpers.rs  lib.rs
chemin-macros/src/derive_chemin/: generate_url_generation.rs  generate_url_parsing.rs  router.rs
chemin-macros/src/derive_chemin/router/: localized_route.rs  path.pest
chemin/src/: lib.rs
