[package]
name = "chemin-macros"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
pest = "2.4.1"
pest_derive = "2.4.1"
proc-macro-crate = "1.2.1"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full", "extra-traits"] }

[dev-dependencies]
maplit = "1.0.2"
