[package]
name = "chemin-macros"
version = "0.1.0"
edition = "2021"
authors = ["Mahdrentys <mahdrentys@gmail.com>"]
description = "Proc macro crate for \"chemin\" crate."
repository = "https://github.com/Mahdrentys/chemin-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
pest = "2.4.1"
pest_derive = "2.4.1"
proc-macro-crate = "1.2.1"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full", "extra-traits"] }

[dev-dependencies]
maplit = "1.0.2"
